# CardRelay

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  integration_research.yml
.github/workflows/: ci.yml
docs/: adapter-development.md  architecture.md  browser-extension-roadmap.md  browser-extension.md  browser-source-reliability.md  collectr-browser-research.md  dex-collection-contract.md  dex-research.md  integrations.md  matching.md  security-model.md
docs/adr/: 0001-canonical-collection-model.md  0002-collectr-source-strategy.md  0003-safe-sync-semantics.md  0004-controlled-destructive-sync.md  0004-local-persistence.md
examples/: config.example.yaml
extension/: README.md  background.js  content.js  dex-content.js  dex-page-observer.js  manifest.json  page-observer.js  popup.css  popup.html  popup.js
src/card_relay/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py  paths.py
tests/e2e/: test_cli_workflow.py  test_csv_workflow.py
tests/integration/: test_storage.py
tests/js/: dex-page-observer.test.mjs  page-observer.test.mjs
tests/unit/: test_browser_fixture_parser.py  test_browser_profile.py  test_collectr_browser_capture.py  test_csv_source.py  test_destination_registry.py  test_dex_contract_fixtures.py  test_dex_read_only.py  test_domain.py  test_extension_companion.py  test_logging.py  test_matching.py  test_safeguards.py  test_sync.py
(+67 files in other folders)
