[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "card-relay"
version = "0.1.0"
description = "Sync your trading card collection from one source of truth to every app."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "alembic>=1.13,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
browser = ["playwright>=1.45,<2"]
http = ["httpx>=0.27,<1"]
dev = ["mypy>=1.11,<2", "pytest>=8,<9", "pytest-cov>=5,<8", "ruff>=0.6,<1", "types-pyyaml>=6"]

[project.scripts]
card-relay = "card_relay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/card_relay"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["live: local-only tests requiring an authenticated user-controlled browser"]

[tool.coverage.run]
branch = true
source = ["card_relay"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["card_relay"]
